@@ -5,6 +5,8 @@ Revision history for Run-Parts
         Replace Modern::Perl with "use 5.010;" + strict and warnings.
         Drop perlcritic.rc.
 
+        Run some more Kwalitee check upon release testing.
+
 0.08    2014-09-11 16:57:00+02:00
 
         Fix dist.ini to exclude emacs style backup files (except in
